--- a/TaskManager/src/main/resources/application.properties
+++ b/TaskManager/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tasksManager
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+spring.datasource.username=root
+spring.datasource.password=#Enter your password
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
